# venmo-lunch-money-sync

./: .gitignore  Dockerfile  LICENSE  README.md  execute.sh  pyproject.toml
.github/workflows/: docker.yml
venmo_to_lunch_money/: __init__.py  __main__.py  cli.py  lunchmoney.py  venmo.py
